Fix catalog align

--- a/less/_base.less
+++ b/less/_base.less
@@ -1130,6 +1130,7 @@ html.pos-notstaff {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
 }
 
 .post-catalog-wrapper {
